@@ -1,6 +1,7 @@
 ﻿using System.Threading;
 using System.Threading.Tasks;
 using HttPlaceholder.Application.Import.Commands;
+using HttPlaceholder.Application.Import.Commands.CreateCurlStub;
 using HttPlaceholder.Application.StubExecution;
 using HttPlaceholder.Domain;
 using Microsoft.VisualStudio.TestTools.UnitTesting;
