@@ -2,7 +2,7 @@
 using HttPlaceholder.Domain;
 using MediatR;
 
-namespace HttPlaceholder.Application.Import.Commands;
+namespace HttPlaceholder.Application.Import.Commands.CreateCurlStub;
 
 public class CreateCurlStubCommand : IRequest<IEnumerable<FullStubModel>>
 {
