@@ -1,8 +1,9 @@
 ﻿using System.Collections.Generic;
 using System.Threading.Tasks;
 using HttPlaceholder.Application.Import.Commands;
+using HttPlaceholder.Application.Import.Commands.CreateCurlStub;
+using HttPlaceholder.Application.Import.Commands.CreateHarStub;
 using HttPlaceholder.Authorization;
-using HttPlaceholder.Domain;
 using HttPlaceholder.Dto.v1.Stubs;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
@@ -27,6 +28,20 @@ public class ImportController : BaseApiController
     public async Task<ActionResult<IEnumerable<FullStubDto>>> CreateCurlStubs(
         [FromBody] string input,
         [FromQuery] bool doNotCreateStub) =>
-        Ok(Mapper.Map<IEnumerable<FullStubModel>>(
+        Ok(Mapper.Map<IEnumerable<FullStubDto>>(
             await Mediator.Send(new CreateCurlStubCommand(input, doNotCreateStub))));
+
+    /// <summary>
+    /// An endpoint that is used for creating stubs based on a HAR file (HTTP Archive)
+    /// </summary>
+    /// <param name="input">The raw HAR JSON input.</param>
+    /// <param name="doNotCreateStub">Whether to add the stub to the data source. If set to false, the stub is only returned but not added.</param>
+    /// <returns>OK, with the generated stubs.</returns>
+    [HttpPost("har")]
+    [ProducesResponseType(StatusCodes.Status200OK)]
+    public async Task<ActionResult<IEnumerable<FullStubDto>>> CreateHarStubs(
+        [FromBody] string input,
+        [FromQuery] bool doNotCreateStub) =>
+        Ok(Mapper.Map<IEnumerable<FullStubDto>>(
+            await Mediator.Send(new CreateHarStubCommand(input, doNotCreateStub))));
 }
